--- a/packages/SystemUI/res/layout/navigation_layout.xml
+++ b/packages/SystemUI/res/layout/navigation_layout.xml
@@ -25,26 +25,6 @@
     android:paddingEnd="@dimen/nav_content_padding"
     android:id="@+id/horizontal">
 
-    <RelativeLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
-
-        <com.android.systemui.statusbar.policy.BatteryBarController
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:visibility="gone"
-            systemui:viewLocation="2"
-            android:layout_alignParentTop="true" />
-
-        <com.android.systemui.statusbar.policy.BatteryBarController
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:visibility="gone"
-            systemui:viewLocation="3"
-            android:layout_alignParentBottom="true" />
-
-    </RelativeLayout>
-
     <com.android.systemui.statusbar.phone.NearestTouchFrame
         android:id="@+id/nav_buttons"
         android:layout_width="match_parent"
@@ -71,5 +51,17 @@
             android:clipChildren="false" />
 
     </com.android.systemui.statusbar.phone.NearestTouchFrame>
+
+    <com.android.systemui.statusbar.policy.BatteryBarController
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="top"
+        systemui:viewLocation="2" />
+
+    <com.android.systemui.statusbar.policy.BatteryBarController
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="bottom"
+        systemui:viewLocation="3" />
 
 </FrameLayout>
