--- a/packages/SystemUI/res/values/tenx_dimens.xml
+++ b/packages/SystemUI/res/values/tenx_dimens.xml
@@ -69,4 +69,7 @@
     <dimen name="qs_header_image_top_margin">4dp</dimen>
     <dimen name="qs_header_image_bottom_margin">4dp</dimen>
 
+    <!-- AOD battery bar -->
+    <dimen name="battery_bar_view_height">6dp</dimen>
+
 </resources>
