--- a/packages/SystemUI/res/values/tenx_dimens.xml
+++ b/packages/SystemUI/res/values/tenx_dimens.xml
@@ -61,4 +61,10 @@
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">30dp</dimen>
 
+    <!-- Custom header image -->
+    <dimen name="qs_header_image_offset">25dp</dimen>
+    <dimen name="qs_header_image_side_margin">4dp</dimen>
+    <dimen name="qs_header_image_top_margin">4dp</dimen>
+    <dimen name="qs_header_image_bottom_margin">4dp</dimen>
+
 </resources>
