--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -278,4 +278,7 @@
     <color name="screenrecord_status_color">#E94235</color>
 
     <color name="keyguard_affordance_background_color">#80000000</color>
+
+    <color name="keyguard_affordance_background_preview">#797979</color>
+    <color name="keyguard_affordance_background_preview_background">#f2f2f2</color>
 </resources>
