--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -1443,4 +1443,8 @@
     <!-- Recognizing fingerprint animation -->
     <dimen name="fod_animation_size">280dp</dimen>
 
+    <dimen name="lockscreen_shortcuts_preview_paddingVertical">30dp</dimen>
+    <dimen name="lockscreen_shortcuts_preview_paddingHorizontal">50dp</dimen>
+    <dimen name="keyguard_affordance_icon_preview_padding">15dp</dimen>
+
 </resources>
