--- a/packages/SystemUI/res/values/tenx_dimens.xml
+++ b/packages/SystemUI/res/values/tenx_dimens.xml
@@ -60,6 +60,7 @@
 
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">30dp</dimen>
+    <dimen name="keyguard_security_fod_view_margin">140dp</dimen>
 
     <!-- Custom header image -->
     <dimen name="qs_header_image_offset">25dp</dimen>
