SystemUI: Add a Toggle to move Battery Icon to QS Header [1/2]
@Aston-Martinn| Fix Battery modes for QS header Battery icon.

Co-authored-by: Aston-Martinn <advaithbhat9@gmail.com>
Signed-off-by: Aston-Martinn <advaithbhat9@gmail.com>

--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -130,4 +130,11 @@
                 android:visibility="gone" />
         </LinearLayout>
 
+    <com.android.systemui.BatteryMeterView
+        android:id="@+id/battery"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:gravity="center_vertical|end"
+        android:visibility="gone" />
+
 </LinearLayout>
